Added support for server variables and added enforcement of specification rules
