# oas-generator-common/src/main/java/com/github/chhorz/openapi/common/properties/ServerProperties.java
@@ -1,9 +1,12 @@
 package com.github.chhorz.openapi.common.properties;
 
+import java.util.Map;
+
 public class ServerProperties {
 
 	private String url;
 	private String description;
+	private Map<String, ServerVariableProperties> variables;
 
 	public String getUrl() {
 		return url;
@@ -21,4 +24,11 @@ public class ServerProperties {
 		this.description = description;
 	}
 
+	public Map<String, ServerVariableProperties> getVariables() {
+		return variables;
+	}
+
+	public void setVariables(Map<String, ServerVariableProperties> variables) {
+		this.variables = variables;
+	}
 }
